Mini fix to CSS
Minor fix to avoid scrollbars

--- a/WebContent/css/firms.css
+++ b/WebContent/css/firms.css
@@ -6,6 +6,7 @@ body { font: normal 12px; font-family: "Liberation Sans", Arial, Helvetica, sans
 a, a:visited { color: #2d8b8c; text-decoration: none; }
 a:hover, a:active { color: #f90; cursor: pointer; }
 ul, li { list-style-type: none; }
+#header { height: 100px; width: 100%; overflow-x: hidden; }
 .embed #header { display: none; }
 #wrapper { margin: 0; text-align: left; position: fixed; top: 0; left: 0; bottom: 0; right: 0; }
 #top1 { font-size: 25px; height: 60px; margin: 0; padding: 0; text-shadow: rgb(204, 204, 204) 2px 2px 2px; vertical-align: bottom; width: 100%; }
@@ -80,7 +81,7 @@ body.embed #linkPanel { display: none; }
 #progressIndicator { background-color: rgba(128,128,128,.5); border: solid 1px rgba(64,64,64,.5); border-radius: 4px; box-shadow: 2px 2px 2px rgba(0,0,0,.5); height: 8px; left: 50%; margin-left: -8%; overflow: hidden; position: absolute; bottom: 10%; width: 16%; z-index: 100; }
 #progressIndicatorValue { background-color: rgba(255,102,0,.5); height: 14px; width: 0px; }
 
-#bottomBar1 { background: none; bottom: 10px; clear: both; color: black; font-size: 12px; font-weight: bold; line-height: 1.5em; margin: 0 auto; opacity: .7; position: absolute; text-align: center; width: 100%; z-index: 1000; }
+#bottomBar1 { background: none; bottom: 10px; color: black; font-size: 12px; font-weight: bold; line-height: 1.5em; margin: 0; padding: 0; opacity: .7; position: absolute; text-align: center; width: 100%; z-index: 1000; text-align: center; }
 #bottomBar1 a, #bottomBar1 a:visited { color: #000; }
 #bottomBar1 a:hover, #bottomBar1 a:active { opacity:1; color: #f90; }
 
